<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    >

  <LinearLayout
      android:id="@+id/bt_announcements"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="24dp"
      android:layout_marginLeft="16dp"
      android:layout_marginTop="24dp"
      android:orientation="horizontal"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tv_my_karunya"
      >

    <ImageView
        android:id="@+id/announcement_ic"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_announcement_button"
        android:scaleType="centerInside"
        android:src="@drawable/announcement"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="16dp"
        android:text="@string/announcements"
        android:textColor="@color/black"
        android:textSize="19sp"
        />
  </LinearLayout>

  <TextView
      android:id="@+id/tv_date_dashboard"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="16dp"
      android:layout_marginTop="2dp"
      android:text="@string/sample_date"
      android:textColor="@color/black"
      android:textSize="22sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tv_important"
      />

  <TextView
      android:id="@+id/tv_my_karunya"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="16dp"
      android:text="@string/my_karunya"
      android:textColor="@color/black"
      android:textSize="22sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/dash_recycler_view"
      />

  <TextView
      android:id="@+id/tv_important"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="16dp"
      android:layout_marginTop="8dp"
      android:text="@string/important"
      android:textColor="@color/bottomNavGray"
      android:textSize="14sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/dash_recycler_view"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tv_date_dashboard"
      />

</androidx.constraintlayout.widget.ConstraintLayout>