<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".announcementDetail.AnnouncementDetail"
    android:background="@color/white"
    >
  
  <TextView
      android:id="@+id/tv_title"
      android:text="@string/title"
      android:textColor="@color/black"
      android:textSize="18sp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:layout_marginLeft="24dp"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintLeft_toLeftOf="parent" />

  <TextView
      android:id="@+id/tv_title_content"
      android:text="@string/title"
      android:textColor="@color/bottomNavGray"
      android:textSize="16sp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="4dp"
      android:layout_marginLeft="24dp"
      app:layout_constraintTop_toBottomOf="@id/tv_title"
      app:layout_constraintLeft_toLeftOf="parent"/>

  <TextView
      android:id="@+id/tv_time"
      android:text="@string/time"
      android:textColor="@color/black"
      android:textSize="18sp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_marginLeft="24dp"
      app:layout_constraintTop_toBottomOf="@id/tv_title_content"
      app:layout_constraintLeft_toLeftOf="parent"/>

  <TextView
      android:id="@+id/tv_time_content"
      android:text="@string/time"
      android:textColor="@color/bottomNavGray"
      android:textSize="16sp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="4dp"
      android:layout_marginLeft="24dp"
      app:layout_constraintTop_toBottomOf="@id/tv_time"
      app:layout_constraintLeft_toLeftOf="parent"/>

  <TextView
      android:id="@+id/tv_desc"
      android:text="@string/desc"
      android:textColor="@color/black"
      android:textSize="18sp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_marginLeft="24dp"
      app:layout_constraintTop_toBottomOf="@id/tv_time_content"
      app:layout_constraintLeft_toLeftOf="parent"/>

  <TextView
      android:id="@+id/tv_desc_content"
      android:text="@string/desc"
      android:textColor="@color/bottomNavGray"
      android:textSize="16sp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="4dp"
      android:layout_marginLeft="24dp"
      app:layout_constraintTop_toBottomOf="@id/tv_desc"
      app:layout_constraintLeft_toLeftOf="parent"/>

  <TextView
      android:id="@+id/tv_author"
      android:text="@string/author"
      android:textColor="@color/black"
      android:textSize="18sp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_marginLeft="24dp"
      app:layout_constraintTop_toBottomOf="@id/tv_desc_content"
      app:layout_constraintLeft_toLeftOf="parent"/>

  <TextView
      android:id="@+id/tv_author_content"
      android:text="@string/author"
      android:textColor="@color/bottomNavGray"
      android:textSize="16sp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="4dp"
      android:layout_marginLeft="24dp"
      app:layout_constraintTop_toBottomOf="@id/tv_author"
      app:layout_constraintLeft_toLeftOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>