<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="0dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >

    <TextView
        android:id="@+id/tv_a_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <TextView
        android:id="@+id/tv_a_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exams"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:background="@drawable/a_red_item_bg"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_a_number"
        />

    <TextView
        android:id="@+id/tv_a_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/sample_date"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_a_number"
        app:layout_constraintStart_toEndOf="@id/tv_a_number"
        app:layout_constraintTop_toTopOf="@+id/tv_a_number"
        />

    <TextView
        android:id="@+id/tv_a_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/sample_date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_a_number"
        app:layout_constraintTop_toBottomOf="@id/tv_a_title"
        />

  </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>