<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".signin.SignInActivity">

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

      <ImageView
          android:id="@+id/login_image"
          android:layout_width="280dp"
          android:layout_height="280dp"
          android:src="@drawable/login_image"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/et_signin_username"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:layout_marginLeft="16dp"
          android:layout_marginRight="16dp"
          android:hint="@string/register_number"
          app:boxStrokeColor="@color/karunyaBlue"
          app:hintTextColor="@color/black"
          app:layout_constraintEnd_toEndOf="parent"
          android:theme="@style/AppTheme"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/login_image"
          >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:padding="16dp"
            android:drawableLeft="@drawable/person"
            android:drawablePadding="8dp"
            />
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/et_signin_password"
          android:theme="@style/AppTheme"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:layout_marginLeft="16dp"
          android:layout_marginRight="16dp"
          android:hint="@string/password"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/et_signin_username"
          >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="16dp"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="8dp"
            />
      </com.google.android.material.textfield.TextInputLayout>

      <Button
          android:id="@+id/bt_sigin"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="16dp"
          android:padding="16dp"
          android:text="@string/sign_in"
          android:textColor="@color/white"
          android:background="@color/karunyaBlue"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/et_signin_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>
  </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>